maze.lessons.maze.island.IslandMaze.scala.error
Escaper:23: error: ';' expected but ')' found.
        if(!estFaceMur()){avance();gauche()})}
                                            ^